# world_engine

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: benchmark.py  mlx_ae.py  prof.py  pytest.ini  simple_client.py  skypilot.yaml
src/: __init__.py  ae.py  patch_model.py  quantize.py  world_engine.py
src/model/: __init__.py  kv_cache.py  nn.py  world_model.py
