[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world_engine"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "torch==2.10.0.dev20251208+cu128",
  "torchvision==0.25.0.dev20251208+cu128",
  "torchaudio==2.10.0.dev20251208+cu128",
  "einops",
  "rotary-embedding-torch>=0.8.8",
  "tensordict==0.10.0",
  "torchao==0.15.0+cu128",
  "fbgemm-gpu-genai==2025.12.13+cu128",  # nightly
  "transformers==4.57.3",
  "ftfy",
  "diffusers",
  "xformers==0.0.34.dev20251208+cu128",  # nightly
  "huggingface-hub==0.36.0",
  "omegaconf",
]

[tool.setuptools]
packages = [
  "world_engine",
  "owl_vaes",
  "owl_vaes.models",
  "owl_vaes.utils",
  "owl_vaes.nn",
  "owl_wms",
  "owl_wms.models",
  "owl_wms.nn",
]

[tool.setuptools.package-dir]
world_engine = "src"
owl_vaes = "submodules/owl-wms/owl-vaes/owl_vaes"
owl_wms = "submodules/owl-wms/owl_wms"
