[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world_engine"
version = "0.0.3"
requires-python = ">=3.9"
dependencies = [
  "torch==2.9.1+cu128",
  "torchvision==0.24.1+cu128",
  "torchaudio==2.9.1+cu128",
  "einops",
  "rotary-embedding-torch>=0.8.8",
  "tensordict==0.10.0",
  "transformers==4.57.3",
  "ftfy",
  "diffusers",
  "huggingface-hub==0.36.0",
  "omegaconf",
  "accelerate==1.12.0",

  # internal dependencies
  "owl-vaes @ git+https://github.com/Wayfarer-Labs/owl-vaes.git@installable",
]

[tool.setuptools]
packages = [
  "world_engine",
  "world_engine.model",
]

[tool.setuptools.package-dir]
world_engine = "src"
